syntax = "proto3";
option csharp_namespace = "WOClient.Library.Api.Protos";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

service Users {
	rpc AddUpdateEvent    (google.protobuf.Int32Value) returns (google.protobuf.Empty);
	rpc DeleteEmployee	  (PersonIdInput) returns (google.protobuf.Empty);
	rpc GetEmployees	  (PersonIdInput) returns (stream UserData);
	rpc IsMailExist		  (google.protobuf.StringValue) returns (google.protobuf.BoolValue);
	rpc LoginRequset	  (LoginInput) returns (UserData);
	rpc Register          (RegisterInput) returns (google.protobuf.Int32Value);
	rpc RequestUserUpdate (google.protobuf.Int32Value) returns (google.protobuf.BoolValue);
}

message PersonIdInput {
	int32 personId = 1;
}

message LoginInput {
	string email    = 1;
	string password = 2;
}

message RegisterInput {
	string firstName    = 1;
	string lastName     = 2;
	string email        = 3;
	string password     = 4;
	string permission   = 5;
	int32 directManager = 6;
}

message UserData {
	int32 id            = 1;
	string email        = 2;
	string firstName    = 3;
	string lastName     = 4;
	string permission   = 5;
	int32 directManager = 6;
}
